--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,104 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* General */
+@font-face {
+    font-family: public-sans-regular;
+    src: url(/public/fonts/Public_Sans/static/PublicSans-Regular.ttf);
+}
+
+@font-face {
+    font-family: public-sans-bold;
+    src: url(/public/fonts/Public_Sans/static/PublicSans-Bold.ttf);
+}
+
+@font-face {
+    font-family: public-sans-semi-bold;
+    src: url(/public/fonts/Public_Sans/static/PublicSans-SemiBold.ttf);
+}
+
+.primary-text-color {
+    color: #FF4238;
+}
+
+.primary-bg-color {
+    background-color: #FF4238;
+}
+
+.primary-border-color {
+    border-color: #FF4238;
+}
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: public-sans-regular;
+
+}
+
+.title {
+    color: #333238;
+    font-family: public-sans-bold;
+}
+
+.title-color {
+    color: #333238;
+}
+
+.dark-blue-grey {
+    color: #43536D;
+}
+
+/* samedy - donation part (Campaign profile) */
+.clearfix::after {
+    content: " ";
+    clear: both;
+    display: table;
+}
+
+.donation {
+    padding: 150px 70px;
+}
+
+.donation-title {
+    color: #333238;
+    font-family: public-sans-bold;
+    line-height: normal;
+}
+
+.donation-subtitle {
+    font-size: 30px;
+}
+
+.donation-less-focus-text {
+    color: #7B8794;
+}
+
+.donation-more-focus-text {
+    color: #43536D;
+    font-family: public-sans-semi-bold;
+}
+
+.donation-details {
+
+}
+
+.donation-details .item .title {
+    /* font-size: 36px; */
+    font-family: public-sans-bold;
+}
+
+.donation-details .item .content {
+    font-size: 24px;
+    color: #333238;
+}
+
+.campaign-profile .less-focus {
+    color: #7B8794;
+}
+
+.campaign-profile .more-focus {
+    color: #333238;
+}
