--- a/resources/css/saovty.css
+++ b/resources/css/saovty.css
@@ -4,3 +4,27 @@ input[type="checkbox"]:checked + .w-8 .tick-icon {
 input[type="radio"]:checked + .w-8 .tick-icon {
     display: block;
 }
+input[id="notification"]::before {
+    content: '';
+    position: absolute;
+    width: 1.25rem;
+    height: 1.25rem;
+    border-radius: 50%;
+    top: 0;
+    left: 0;
+    transform: scale(1.1);
+    box-shadow: 0 0.125rem 0.5rem rgba(0, 0, 0, 0.2);
+    background-color: white;
+    transition: .2s ease-in-out;
+  }
+  input:checked {
+    @apply: bg-indigo-400;
+    background-color:rgb(50, 125, 247);
+  
+  }
+
+  input:checked:before {
+    left: 1.25rem;
+  }
+
+
