Enhance the form: - Add image of qr bank - add additional contact form - add image thumbnail - add user identity card - add item category when donating or choosing item when raising

--- a/resources/css/panha.css
+++ b/resources/css/panha.css
@@ -25,3 +25,9 @@ input[type="radio"]:checked + .w-8 .tick-icon {
     background-color: lightgrey;
     border-radius: 0.5rem;
 }
+#previewImage {
+    max-height: 150px;
+}
+.previewImage {
+    max-height: 150px;
+}
