--- a/resources/css/panha.css
+++ b/resources/css/panha.css
@@ -76,3 +76,6 @@ input[type="radio"]:checked + .w-8 .tick-icon {
         transform: translate(24px, 0);
     }
 }
+
+
+/*.map { position: absolute; top: 100px;left: 0; bottom: 100px; width: 30%; }*/
