--- a/resources/css/panha.css
+++ b/resources/css/panha.css
@@ -79,3 +79,50 @@ input[type="radio"]:checked + .w-8 .tick-icon {
 
 
 /*.map { position: absolute; top: 100px;left: 0; bottom: 100px; width: 30%; }*/
+/*for datalist*/
+fieldset#item_category_form {
+    /*border: 1px solid blue;*/
+    width: 360px;
+    /*border-radius: 5px;*/
+}
+
+#item_category_form legend,#item_category_form label{
+    /*color: blue;*/
+    /*font-size: 24px;*/
+    font-family: sans-serif;
+}
+
+input#item_category_name {
+    font-size: 18px;
+    /*padding: 5px;*/
+    /*height: 35px;*/
+    /*width: 350px;*/
+    /*border: 1px solid blue;*/
+    outline: none;
+    /*border-radius: 5px;*/
+    /*color: blue;*/
+    /*   border-bottom: none; */
+}
+datalist {
+    /*display: block;*/
+    position: absolute;
+    background-color: white;
+    /*border: 1px solid blue;*/
+    border-radius: 0 0 5px 5px;
+    border-top: none;
+    font-family: sans-serif;
+    width: 350px;
+    padding: 5px;
+    max-height: 10rem;
+    overflow-y: auto
+
+}
+
+option {
+    background-color: white;
+    padding: 4px;
+    /*color: blue;*/
+    margin-bottom: 1px;
+    font-size: 18px;
+    cursor: pointer;
+}
