added some components

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -58,9 +58,9 @@
     display: table;
 }
 
-.donation {
+/* .donation {
     padding: 150px 70px;
-}
+} */
 
 .donation-title {
     color: #333238;
